# goldendj

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  custom_synthesizer.py  main.py  pyproject.toml  song_downloader.py  song_downloader_agent.py  telephony_server.py
